# tauri-plugin-torchlight

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  rollup.config.js  tsconfig.json
.github/workflows/: clippy.yml  test.yml
android/: .gitignore  build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: TorchMath.kt  TorchlightPlugin.kt
android/src/test/java/: ExampleUnitTest.kt  TorchMathTest.kt
examples/tauri-plugin-torchlight-example/: .prettierrc  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
examples/tauri-plugin-torchlight-example/src/: main.tsx  style.css
examples/tauri-plugin-torchlight-example/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-plugin-torchlight-example/src-tauri/capabilities/: default.json
examples/tauri-plugin-torchlight-example/src-tauri/icons/: icon.icns
examples/tauri-plugin-torchlight-example/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift  TorchMath.swift  TorchlightPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: .gitignore  default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: torch.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
