[package]
name = "tauri-plugin-torchlight"
version = "1.0.5"
authors = ["mao <mao.lembryo@gmail.com>"]
description = "Tauri plugin for smartphone torchlight"
edition = "2021"
repository = "https://github.com/lembryo/tauri-plugin-torchlight.git"
rust-version = "1.62.0"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-torchlight"

[dependencies]
tauri = { version = "2.1.0" }
serde = "1.0.214"
thiserror = "2.0.2"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
