[package]
name = "tauri-plugin-torchlight"
version = "1.0.9"
authors = ["mao <mao.lembryo@gmail.com>"]
description = "Tauri plugin for smartphone torchlight"
edition = "2024"
repository = "https://github.com/lembryo/tauri-plugin-torchlight.git"
rust-version = "1.85.0"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-torchlight"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0.228"
thiserror = "2.0.17"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
