[package]
name = "tauri-plugin-torchlight"
version = "1.0.10"
authors = ["mao <mao.lembryo@gmail.com>"]
description = "Tauri plugin for smartphone torchlight"
edition = "2024"
repository = "https://github.com/lembryo/tauri-plugin-torchlight.git"
rust-version = "1.85.0"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-torchlight"

[dependencies]
tauri = { version = "2.11.3" }
serde = "1.0.228"
thiserror = "2.0.18"

[build-dependencies]
tauri-plugin = { version = "2.6.3", features = ["build"] }

[dev-dependencies]
serde_json = "1.0"
