[package]
name = "tauri-plugin-torchlight-example"
version = "1.0.10"
description = "An example of using tauri-plugin-torchlight"
authors = ["mao <mao.lembryo@gmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "tauri_plugin_torchlight_example"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.5.3", default-features = false, features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-torchlight = { git = "https://github.com/lembryo/tauri-plugin-torchlight.git" }
